# moj-github-discovery

./: .coverage  .gitignore  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  Makefile  README.md  RepoList.txt  alert_metrics.py  alert_metrics_analysis.py  alerts_metrics.py  archive_repos.py  archived-namespaces-crossref.py  audit_repo.py  catalogue-crossref.py  cspell.json  dashboard.py  dashboard_cli.py  dependency-check-suppression.xml  fetch_repos.py  github_alerts_metrics.py  github_workflow.py  github_workflow_posture_summary.txt  lfs_script.py  list_repos.py  main.py  org_security_posture.py  package-lock.json  package.json  pyproject.toml  renovate.json  repo_compliance.py  repo_list.yaml  requirements-dashboard.txt  requirements.txt  ruff.toml  testEnv.py  utils.py  (+1 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  dependency-review-config.yml
config/: audit_config.yaml  audit_parity_config.yaml  monitoring_config.yaml
core/: __init__.py  collector.py  compiler.py  config.py  github_api.py  github_client.py  http_client.py  models.py  output_paths.py  presenters.py  repo_list.py  storage.py  transforms.py  utils.py
docker-audit-cli/: .env.example  Dockerfile  Dockerfile.dockerignore  README.md  list-repos-10.yaml
docs/: 219_dashboard_restore.md  CONTRIBUTING.md  GitHub- SOW004.docx  audit-cli-script-data-overlap.md  audit-cli-script-outputs.md  audit_parity.md  repo_list_maintenance.md  security_alert_checking.md  setup.md  uv-management.md
notebooks/: Basic Analysis.ipynb
(+47 files in other folders)
