[project]
name = "moj-github-discovery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dash>=2.0.0",
    "openpyxl>=3.0.0",
    "pandas>=1.3.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "requests>=2.33.1",
]

[tool.pytest.ini_options]
addopts = "-m 'not integration'"
markers = [
    "integration: tests that hit the real GitHub API (require a valid token)",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]

[tool.ruff.lint]
ignore = ["F841"]