[project]
name = "audit-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=46.0.6",
    "dash>=2.0.0",
    "openpyxl>=3.0.0",
    "pandas>=1.3.0",
    "pydantic>=2.0",
    "pyjwt>=2.12.1",
    "pyyaml>=6.0",
    "requests>=2.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "scripts"]

[tool.hatch.build]
include = ["main.py"]

[tool.uv]
package = true

[project.scripts]
audit-cli = "main:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]

[tool.pytest.ini_options]
addopts = "-m 'not integration'"
markers = [
    "integration: tests that hit the real GitHub API (require a valid token)",
]

[tool.ruff.lint]
ignore = ["BLE001", "F841", "TRY002"]
